Made text on search result smaller. Fixed IE display issue for search results not wrapping

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -650,6 +650,7 @@ button:disabled {
     margin: 0; }
 
 .searchbar {
+  line-height: 1;
   width: 100%;
   height: 100%;
   padding: 1.65rem 2.2rem;
@@ -657,7 +658,7 @@ button:disabled {
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   color: #333333;
-  font-size: 2rem; }
+  font-size: 1.5rem; }
   @media only screen and (min-width: 56.25em) {
     .searchbar {
       width: 88%;
@@ -691,11 +692,13 @@ button:disabled {
     justify-content: space-around;
     padding: 1.1rem; }
   .search-result__title {
+    width: 100%;
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 2.3rem;
     text-align: center; }
   .search-result__location {
+    width: 100%;
     color: #4d4d4d;
     font-size: 1.1rem;
     line-height: 1.6rem;
@@ -720,13 +723,12 @@ button:disabled {
   flex-direction: column;
   align-items: center;
   height: 95%;
-  justify-content: center;
+  justify-content: space-around;
   overflow-y: scroll; }
   @media only screen and (min-width: 46.875em) {
     .search-results {
       flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-around; } }
+      flex-wrap: wrap; } }
   @media only screen and (min-width: 56.25em) {
     .search-results {
       flex-direction: column;
