--- a/client/src/styles/components/search/_searchResults.scss
+++ b/client/src/styles/components/search/_searchResults.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 95%;
-  justify-content: center;
+  justify-content: space-around;
   overflow-y: scroll;
 
   // Temporarily wrap elements for screens that 
@@ -12,7 +12,6 @@
   @include bp(S) {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
   }
 
   // Expand back for desktop layout
