--- a/client/src/styles/components/search/_searchbar.scss
+++ b/client/src/styles/components/search/_searchbar.scss
@@ -38,6 +38,7 @@
 }
 
 .searchbar {
+  line-height: 1;
   width: 100%;
   height: 100%;
   padding: padding(S) padding(M);
@@ -46,7 +47,7 @@
   border-radius: radius(small);
   box-shadow: shadow(medium);
   color: color(black);
-  font-size: 2rem;
+  font-size: 1.5rem;
 
   @include bp(M) {
     width: 88%;
